Fix the sidebar title alignment once and for all
It may fix

/* Fix bad margin at some sizes for icon-doc-text. */
.icon-doc-text {
    padding-right: 3px;
}

--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -96,6 +96,7 @@ a:hover,a:active {;
   font-style: normal;
   font-size: 75%;
   display: inline-block;
+  width: 16px;
   margin-right: 8px;
   text-align: center;
   vertical-align: top;
